manifests/core/apps/wiki/wiki-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: core
spec:
  selector:
    matchLabels:
      app: wikijs-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: wikijs-postgres
    spec:
      volumes:
        - name: wikijs-postgres-data-vol
          persistentVolumeClaim:
            claimName: wikijs-postgres-data-pvc
      containers:
        - name: wikijs-postgres
          image: postgres:16.2
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: 512Mi
              cpu: 50m
            requests:
              memory: 512Mi
              cpu: 50m
          volumeMounts:
            - name: wikijs-postgres-data-vol
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs-postgres-service
spec:
  selector:
    app: wikijs-postgres
  ports:
    - name: wikijs-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
